<resources>
    <string name="app_name">CA1</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="card">#</string>
    <string name="del">X</string>
    <string name="ast">*</string>
    <string name="dial">Dial</string>
    <string name="mem1">Mem1</string>
    <string name="mem2">Mem2</string>
    <string name="mem3">Mem3</string>
    <string name="name">Name</string>
    <string name="number">Phone</string>
    <string name="mem">Memory Edit</string>
    <string name="test">935565868</string>
</resources>