<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:freezesText="false"
            android:paddingLeft="30dp"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="60sp" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="delete"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLayout">

        <Button
            android:id="@+id/mem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="memory1"
            android:text="@string/mem1" />

        <Button
            android:id="@+id/mem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="memory2"
            android:text="@string/mem2" />

        <Button
            android:id="@+id/mem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="memory3"
            android:text="@string/mem3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/forthLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLayout">

        <Button
            android:id="@+id/dial1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/one"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/two"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/three"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forthLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fifthLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdLayout">

        <Button
            android:id="@+id/dial4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/four"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/five"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/six"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sixthLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forthLayout">

        <Button
            android:id="@+id/dial7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/seven"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/eight"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/nine"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixthLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/seventhLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifthLayout">

        <Button
            android:id="@+id/dialplus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="dialKeys"
            android:text="@string/ast"
            android:textColor="#545555"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dial0"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/zero"
            android:textColor="#00BCD4"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialAst"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hapticFeedbackEnabled="true"
            android:onClick="dialKeys"
            android:text="@string/card"
            android:textColor="#545555"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seventhLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#2DCC70"
            android:hapticFeedbackEnabled="true"
            android:onClick="dial"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>